# vm

./: .clang-format  CMakeLists.txt  README.md  build.sh  build_tests.sh
include/: defines.h  instructions.h  parser.h  unix_terminal.h
src/: CMakeLists.txt  instructions.cpp  main.cpp  parser.cpp  test_instructions.cpp  test_parser.cpp  tests.cpp  unix_terminal.cpp
tests/: build_tests.sh  test_add_2_regs.txt  test_add_imm_mode.txt  test_and_2_regs.txt  test_and_imm_mode.txt  test_branch_n.txt  test_branch_np.txt  test_branch_p.txt  test_branch_z.txt  test_jmp_valid.txt  test_jsr_immediate.txt  test_jsr_reg.txt  test_ld.txt  test_ldi.txt  test_parse_correct.txt  test_parse_invalid.txt
